--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "react-useform",
-  "version": "1.0.0",
+  "name": "@cecore/react-useform",
+  "version": "1.0.1",
   "description": "Lightweight Form Library for React using Hooks",
   "main": "dist/index.js",
+  "module": "dist/index.js",
   "author": "dabishan",
-  "license": "ISC",
+  "license": "MIT",
   "keywords": [
     "react",
     "hooks",
@@ -24,5 +25,13 @@
   },
   "peerDependencies": {
     "react": "^16.8.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dabishan/react-useform.git"
+  },
+  "bugs": {
+    "url": "https://github.com/dabishan/react-useform/issues"
+  },
+  "homepage": "https://github.com/dabishan/react-useform#readme"
 }
